@@ -9,7 +9,7 @@
         <version>1.4-jdk20-SNAPSHOT</version>
     </parent>
     <artifactId>file</artifactId>
-
+    <version>1.4-jdk21-SNAPSHOT</version>
 
     <dependencies>
 
@@ -26,16 +26,13 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--add-modules=jdk.incubator.concurrent</arg>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <compilerVersion>20</compilerVersion>
-                    <source>20</source>
-                    <target>20</target>
+                    <compilerVersion>21</compilerVersion>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
         </plugins>
